Fixing body overflow-x

--- a/css/0_General_styling.css
+++ b/css/0_General_styling.css
@@ -8,5 +8,6 @@ html {
 body {
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
     background: linear-gradient(to right, black, #1F2833 40%, black);
 }
